<resources>
    <string name="app_name">NASA picture of the day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="theme">Theme</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="apply">Apply</string>
    <string name="num_of_days_history">Num of days history</string>
    <string name="settings_title">Settings</string>
    <string name="fab">FAB</string>
    <string name="explanation">Explanation</string>
    <string name="earth_photo">Earth photo</string>

</resources>
