<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.picture.PictureOfTheDayFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Picture of the day"
            app:menu="@menu/menu_app_bar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/TextInputStyle"
                android:hint="@string/search_wiki"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <com.joesemper.pictureoftheday.util.EquilateralImageView
                android:id="@+id/image_view"
                style="@style/ImageViewStyle"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explanation"
                style="@style/TextAppearance.AppCompat.Header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view" />

            <TextView
                android:id="@+id/tv_explanation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Simple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

