<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.picture.PictureOfTheDayFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_app_bar"
            app:title="Picture of the day" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:ignore="MotionLayoutInvalidSceneFileReference">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_pod"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:padding="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <com.joesemper.pictureoftheday.util.MirrorView
                    android:id="@+id/main_mirror"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pod_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.joesemper.pictureoftheday.util.EquilateralImageView
                        android:id="@+id/image_view_pod"
                        style="@style/ImageViewStyle"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/photo_of_the_day_stub"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_no_photo_vector" />

                    <TextView
                        android:id="@+id/tv_main_header"
                        style="@style/TextAppearance.AppCompat.Header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_view_pod" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

